@@ -20,11 +20,13 @@ Direct3D 10
 	* Added missing creation method overloads to Effect.
 	* Added missing Get/SetRawValue methods to EffectVariable.
 	* Added ResourceOptionFlags.GdiCompatible and ResourceOptionFlags.KeyedMutex.
+	* Added Resource.SaveTextureToFile, which allows for saving a texture without knowing its concrete type.
 	* Fixed a COM reference leak in Device.OpenSharedResource.
 
 Direct3D 11
 	* Fixed a COM reference leak in Device.OpenSharedResource.
 	* Added IsDataAvailable to the DeviceContext interface.
+	* Added Resource.SaveTextureToFile, which allows for saving a texture without knowing its concrete type.
 
 DXGI
 	* Changed SwapChain.Dispose to throw if the adapter is in fullscreen mode. This prevents a crash inside DXGI.
